--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-    "name": "silly-cipher",
-    "version": "1.0.0",
-    "description": "encoder-decoder",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Chris-Mark-Wilson",
-    "license": "ISC",
-    "bin": {
-        "silly-cipher": "index.js"
-    }
+  "name": "silly-cipher",
+  "version": "1.0.2",
+  "description": "encoder-decoder",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Chris-Mark-Wilson",
+  "license": "ISC",
+  "bin": {
+    "silly-cipher": "index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chris-Mark-Wilson/npmCipher.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Chris-Mark-Wilson/npmCipher/issues"
+  },
+  "homepage": "https://github.com/Chris-Mark-Wilson/npmCipher#readme"
 }
